# Specialized-Training-Program

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  app.py  change_port.py  config.py  deploy_to_github.py  lexique.csv  lexique_complet.csv  lexique_exemple.csv  pyproject.toml  run.py  setup.py  test_app.py  test_connection.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
screenshots/: README.md
templates/: index.html  lecon.html
